--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": ">=7.0.0",
         "publisher/publisher" : "dev-master",
+        "symfony/validator": "^3.1",
         "publisher/recommendation" : "dev-master"
     },
     "autoload": {
